# ICT1009-Part2

./: .gitignore  CMakeLists.txt  ICT1009-Part2  LICENSE  README.md  cmake_install.cmake
dependencies/Bcrypt/: bcrypt.cpp
dependencies/fmt/: Makefile  cmake_install.cmake
management/: Admin.cpp  Admin.h  Authenication.cpp  Authenication.h  Authentication.cpp  Authentication.h  Classes.cpp  Classes.h  Classroom.cpp  Classroom.h  Lecturer.cpp  Lecturer.h  Menu.cpp  Menu.h  Module.cpp  Module.h  Person.cpp  Person.h  Programmes.cpp  Programmes.h  Student.cpp  Student.h  admin.cpp  admin.h  main.cpp  menu.cpp  menu_item.cpp  menu_item.h
sql/: PMSDB.db  example.db  sqlDB.cpp  sqlDB.h  sqlDb.cpp
student/: Course.cpp  Course.h  Person.cpp  Student.h  main.cpp  menu_item.h
